save changes to index

--- a/unit_1/css/index.html
+++ b/unit_1/css/index.html
@@ -4,8 +4,11 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>
 <body>
-<hi>"Looking at you"</hi>h1>
-<p>This is the website for photo sharing</p>p>
-</body>body>
+		<h1>GET2PHOTO</h1>
+		<p>This is the website for photo sharing</p>
+	</body>
+</html>
+
+	
 
 
